Improving minigame points system, adding possibility of adding posts with photo and displaing it, visible password politics for user and some improvements and fixes

--- a/css/style_main.css
+++ b/css/style_main.css
@@ -13,3 +13,12 @@
 .creating-group > button{
     flex-grow: inherit;
 }
+
+.postPhoto{
+    max-width: 100%;
+    max-height: 400px;
+}
+
+.profile-pic{
+    width: 10%;
+}
